fix: Allow all CORS origins in Auth Service